--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
           "parentOrganization": {
             "@type": "Organization",
             "@id": "https://sidhi.xyz/#organization",
-            "name": "Sidhi"
+            "name": "Sidhi Labs"
           }
         },
         {
           "@type": "Organization",
           "@id": "https://sidhi.xyz/#organization",
-          "name": "Sidhi",
+          "name": "Sidhi Labs",
           "url": "https://sidhi.xyz"
         }
       ]
