--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="canonical" href="https://engdraft.sidhi.xyz/">
 
     <script type="application/ld+json">
-    {
+   {
       "@context": "https://schema.org",
       "@graph": [
         {
@@ -16,21 +16,27 @@
           "@id": "https://engdraft.sidhi.xyz/#software",
           "name": "EngDraft",
           "description": "Technology-heavy learning platform focused on engineering precision and automated technical design education.",
-          "applicationCategory": "Education/Engineering Tool",
-          "operatingSystem": "Web-based",
+          "applicationCategory": "EducationApplication",
+          "operatingSystem": "Web Browser",
           "url": "https://engdraft.sidhi.xyz/",
           "author": { "@id": "https://ceo.sidhi.xyz/#person" },
+          "offers": {
+            "@type": "Offer",
+            "price": "0",
+            "priceCurrency": "INR",
+            "description": "Professional engineering drafting modules",
+            "availability": "https://schema.org/PreOrder"
+          },
           "parentOrganization": {
-            "@type": "Organization",
-            "@id": "https://sidhi.xyz/#organization",
-            "name": "Sidhi Labs"
+            "@id": "https://sidhi.xyz/#organization"
           }
         },
         {
           "@type": "Organization",
           "@id": "https://sidhi.xyz/#organization",
-          "name": "Sidhi Labs",
-          "url": "https://sidhi.xyz"
+          "name": "SidhiLynx",
+          "url": "https://sidhi.xyz",
+          "logo": "https://sidhi.xyz/logo.jpeg"
         }
       ]
     }
