--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
             "description": "Professional engineering drafting modules",
             "availability": "https://schema.org/PreOrder"
           },
+          "sameAs": [
+            "https://www.wikidata.org/wiki/Q137646541",
+           
+          ],
           "parentOrganization": {
             "@id": "https://sidhi.xyz/#organization"
           }
