--- a/index.html
+++ b/index.html
@@ -9,41 +9,42 @@
 
     <script type="application/ld+json">
    {
-      "@context": "https://schema.org",
-      "@graph": [
-        {
-          "@type": "SoftwareApplication",
-          "@id": "https://engdraft.sidhi.xyz/#software",
-          "name": "EngDraft",
-          "description": "Technology-heavy learning platform focused on engineering precision and automated technical design education.",
-          "applicationCategory": "EducationApplication",
-          "operatingSystem": "Web Browser",
-          "url": "https://engdraft.sidhi.xyz/",
-          "author": { "@id": "https://ceo.sidhi.xyz/#person" },
-          "offers": {
-            "@type": "Offer",
-            "price": "0",
-            "priceCurrency": "INR",
-            "description": "Professional engineering drafting modules",
-            "availability": "https://schema.org/PreOrder"
-          },
-          "sameAs": [
-            "https://www.wikidata.org/wiki/Q137646541",
-           
-          ],
-          "parentOrganization": {
-            "@id": "https://sidhi.xyz/#organization"
-          }
-        },
-        {
-          "@type": "Organization",
-          "@id": "https://sidhi.xyz/#organization",
-          "name": "SidhiLynx",
-          "url": "https://sidhi.xyz",
-          "logo": "https://sidhi.xyz/logo.jpeg"
-        }
-      ]
+  "@context": "https://schema.org",
+  "@graph": [
+    {
+      "@type": "SoftwareApplication",
+      "@id": "https://engdraft.sidhi.xyz/#software",
+      "name": "EngDraft",
+      "description": "Technology-heavy learning platform focused on engineering precision and automated technical design education.",
+      "applicationCategory": "EducationApplication",
+      "operatingSystem": "Web Browser",
+      "url": "https://engdraft.sidhi.xyz/",
+      "author": {
+        "@id": "https://ceo.sidhi.xyz/#person"
+      },
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "INR",
+        "description": "Professional engineering drafting modules",
+        "availability": "https://schema.org/PreOrder"
+      },
+      "sameAs": [
+        "https://www.wikidata.org/wiki/Q137646541"
+      ],
+      "parentOrganization": {
+        "@id": "https://sidhi.xyz/#organization"
+      }
+    },
+    {
+      "@type": "Organization",
+      "@id": "https://sidhi.xyz/#organization",
+      "name": "SidhiLynx",
+      "url": "https://sidhi.xyz",
+      "logo": "https://sidhi.xyz/logo.jpeg"
     }
+  ]
+}
     </script>
 
     <script src="https://cdn.tailwindcss.com"></script>
