--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
       "logo": "https://sidhi.xyz/logo.jpeg"
     }
   ]
-}
-    </script>
+}    </script>
 
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=JetBrains+Mono&display=swap" rel="stylesheet">
